# Kitsune_optimization

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PHASE4_SUMMARY.md  QUICKSTART_DOCS.md  README.md  RELEASE_NOTES_v0.1.0.md  RUNNING_DOCS.md  WEBSITE_CREATION_PROMPT.md  mkdocs.yml  plan.md  pyproject.toml  run_docs.sh  test_hybrid.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: benchmarks.yml  ci.yml  docs.yml  release.yml
benchmarks/: Kitsune_Benchmarks_Colab.ipynb  Kitsune_T4_Optimization.ipynb  README.md  advanced_2x_test.py  clean_optimization_test.py  colab_hybrid_test.py  colab_test_new_optimizations.py  device_aware_test.py  hardware_specs.md  kitsune_v2_test.py  methodology.md  run_colab_benchmarks.py  run_training_benchmarks.py  standalone_test.py  t4_colab_benchmark.py  test_apple_optimizer.py  test_optimizations.py  test_torch_compile.py  ultimate_optimization_test.py  validate_fix.py
benchmarks/charts/: .gitkeep
benchmarks/platform_tests/: README.md  test_apple.py  test_rtx.py  test_t4.py
benchmarks/results/: .gitkeep
benchmarks/scripts/: README.md  benchmark_lenet5.py  benchmark_mlp.py  benchmark_resnet18.py  run_all_benchmarks.sh  visualize_results.py
docs/: README.md  changelog.md  contributing.md  index.md
docs/api/: amp.md  executor.md  fusion.md  graph.md  memory.md  optimizer.md  profiler.md  scheduler.md  task.md
docs/benchmarks/: methodology.md  results.md
docs/getting-started/: installation.md  quickstart.md
docs/javascripts/: mathjax.js
docs/stylesheets/: extra.css
docs/user-guide/: amp.md  kernel-fusion.md  memory-management.md  overview.md  profiling.md  stream-parallelism.md
examples/: basic_usage.py  final_demo.py  resnet18_graph.dot  week2_graph_capture.py  week3_stream_parallelism.py  week4_mvp_demo.py  week5_kernel_fusion.py  week6_amp_integration.py
kitsune/: __init__.py
kitsune/amp/: __init__.py  autocast.py  config.py  optimizer.py  scaler.py
kitsune/api/: __init__.py  device_config.py  optimizer.py  optimizer_new.py  optimizer_v2.py  simple_optimizer.py
kitsune/backends/: __init__.py  apple_optimizer.py  backend_selector.py  experimental.py  rtx_optimizer.py  stable.py  t4_optimizer.py
kitsune/core/: __init__.py  compiler.py  executor.py  graph.py  optimized_wrapper.py  task.py  (+1 more)
notebooks/: kitsune_demo.ipynb
scripts/: README_ASSETS.md  demo_script.sh  docs.sh  generate_charts.py  generate_diagrams.py  publish_prod.sh  publish_test.sh
tests/: __init__.py
(+37 files in other folders)
