[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kitsune"
version = "0.1.0"
description = "CUDA-accelerated dynamic task scheduler for PyTorch neural network training"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Kitsune Team"}
]
keywords = [
    "pytorch",
    "cuda",
    "deep-learning",
    "scheduler",
    "optimization",
    "gpu",
    "dataflow"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
# Triton is only available on Linux - optional for kernel fusion (Week 5)
triton = [
    "triton>=2.1.0; sys_platform == 'linux'",
]
dev = [
    "pytest>=7.0.0",
    "pytest-benchmark>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
viz = [
    "matplotlib>=3.5.0",
    "tensorboard>=2.10.0",
]
all = [
    "kitsune[dev,viz,triton]",
]

[project.urls]
Homepage = "https://github.com/kitsune-scheduler/kitsune"
Documentation = "https://github.com/kitsune-scheduler/kitsune#readme"
Repository = "https://github.com/kitsune-scheduler/kitsune"

[tool.setuptools.packages.find]
where = ["."]
include = ["kitsune*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "benchmark: marks tests as benchmarks (deselect with '-m \"not benchmark\"')",
    "cuda: marks tests that require CUDA",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
